k8s/ui-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: redischat-ui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redischat-ui
    spec:
      containers:
      - name: redischat-ui
        image: dolphub/redischat-ui:0.1.1
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: redischat-ui
